# telecom-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.telecom_mcp/fixtures/: state.json
docs/: examples.md  runbook.md  security.md  targets.example.yaml  telecom-mcp-implementation-plan.md  telecom-mcp-tool-specification.md  tools.md  tracked-files-summary.md
scripts/: agent_readiness_check.py  capture_fixtures.py  chaos_run.py  crp_run.py  mcp_sdk_smoke.py  observability_check.py
tests/: test_agent_readiness.py  test_authz.py  test_chaos_runner.py  test_config.py  test_connectors.py  test_crp.py  test_envelope.py  test_expansion_batch1_tools.py  test_expansion_batch2_tools.py  test_expansion_batch3_tools.py  test_expansion_batch4_tools.py  test_fixture_capture.py  test_freeswitch_events.py  test_freeswitch_inbound_esl_sessions.py  test_freeswitch_normalize.py  test_mcp_server_stage10.py  test_mcp_stdio_initialize.py  test_observability.py  test_rate_limit.py  test_release_gates.py  test_remediation_expansion_findings.py  test_remediation_hardening.py  test_safety_policy.py  test_stage02_playbooks_and_smokes.py  test_stage03_audit_baselines.py  test_stage03_chaos_framework.py  test_stage03_incident_evidence_packs.py  test_stage03_probe_suite.py  test_stage03_resilience_scorecards.py  test_stage03_scorecard_policy_inputs.py  test_stage03_self_healing.py  test_stage04_release_gate_tool.py  test_stage04_release_promotion_and_history.py  test_telecom_summary_contract.py  test_tools_contract_smoke.py
(+584 files in other folders)
