[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-mcp"
version = "0.1.3"
description = "Model Context Protocol server for telecom observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
  "ruff==0.15.4",
  "black==26.1.0",
  "mypy==1.19.1",
  "pip-audit==2.10.0",
  "cyclonedx-bom==7.2.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
