[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom_mcp"
version = "0.1.9"
description = "Model Context Protocol server for telecom observability"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "ruff==0.15.10",
  "black==26.3.1",
  "mypy==1.20.1",
  "pip-audit==2.10.0",
  "cyclonedx-bom==7.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
